[package]
name = "ue4-cli-rs"
version = "0.1.0"
authors = ["Mikael Pettersson <mikael.pettersson@liu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_json = "1.0.64"
walkdir = "2.3.2"
winreg = "0.9.0"
